argoingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx" # Ensure it matches your ingress controller
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # Backend communication via HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  tls:
    - hosts:
        - argo.bergtobias.com # Your domain name
      secretName: argocd-tls # Secret created by Cert-Manager
  rules:
    - host: argo.bergtobias.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443 # Ensure your backend service uses HTTPS
